--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -67,7 +67,8 @@
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
-        <activity android:name=".ReadyForRecommendProgressActivity"></activity>
+        <activity android:name=".ReadyForRecommendProgressActivity" />
+        <activity android:name=".LoadingActivity"></activity>
     </application>
 
 </manifest>
