--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -48,10 +48,6 @@
             android:label="평가하기"
             android:theme="@style/Theme.AppCompat.Dialog" />
         <activity
-            android:name=".RatingActivity2"
-            android:label="평가하기"
-            android:theme="@style/Theme.AppCompat.Dialog" />
-        <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name" />
@@ -67,8 +63,12 @@
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
-        <activity android:name=".ReadyForRecommendProgressActivity" />
-        <activity android:name=".LoadingActivity"></activity>
+        <activity android:name=".ReadyForGetMongId" />
+        <activity android:name=".LoadingActivity"></activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
+     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
     </application>
 
 </manifest>
