--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -42,10 +42,18 @@
             android:value="@integer/google_play_services_version" />
         -->
         <activity android:name=".HomeActivity" />
-        <activity android:name=".ContentsView$RatingClass" />
+        <activity android:name=".ContentsView$ButtonClass" />
         <activity
             android:name=".RatingActivity1"
             android:label="평가하기"
+            android:theme="@style/Theme.AppCompat.Dialog" />
+        <activity
+            android:name=".ProgressBarActivity"
+            android:label="코멘트 불러오는중..."
+            android:theme="@style/Theme.AppCompat.Dialog" />
+        <activity
+            android:name=".CommentActivity"
+            android:label="코멘트"
             android:theme="@style/Theme.AppCompat.Dialog" />
         <activity
             android:name="com.facebook.FacebookActivity"
