--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -33,4 +33,8 @@ dependencies {
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:multidex:1.0.1'
+    compile fileTree(dir: 'libs', include:['*.jar'])
+    testCompile 'junit:junit:4.12'
+    compile 'com.android.support:appcompat-v7:25.1.1'
+    compile files('libs/picasso-2.5.2.jar')
 }
