--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "25.0.3"
+    buildToolsVersion "26.0.1"
 
     repositories {
         mavenCentral()
@@ -11,7 +11,7 @@ android {
         applicationId "com.example.youngun.myapplication"
         multiDexEnabled true
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
     }
@@ -27,11 +27,11 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     provided 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
-    compile 'com.android.support:appcompat-v7:26.0.1'
+    compile 'com.android.support:appcompat-v7:26+'
     compile 'com.google.android.gms:play-services-appindexing:9.8.0'
     compile 'com.facebook.android:facebook-login:[4,5)'
-    compile 'com.android.support:support-v4:26.0.1'
-    compile 'com.android.support:design:26.0.1'
+    compile 'com.android.support:support-v4:26+'
+    compile 'com.android.support:design:26+'
     compile 'com.android.support:multidex:1.0.1'
 }
 
