error페이지 생성

--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.1"
 
-    lintOptions{
+    lintOptions {
         abortOnError false
     }
     repositories {
@@ -27,6 +27,7 @@ android {
     useLibrary 'org.apache.http.legacy'
 }
 dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     provided 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
