--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -89,7 +89,8 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:name="mong.ddang.youngun.myapplication.WelcomeActivity"></activity>
+        <activity android:name="mong.ddang.youngun.myapplication.WelcomeActivity" />
+        <activity android:name="mong.ddang.youngun.myapplication.ErrorActivity"></activity>
     </application>
 
 </manifest>
