--- a/RecommendSystem/.recommenders/caches/identified-project-coordinates.json
+++ b/RecommendSystem/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\Users\\youngun\\AndroidStudioProjects\\SeoulMongDDang\\RecommendSystem\\CF","type":"PROJECT","hints":{"PROJECT_NAME":"CF"}},"ABSENT"],[{"location":"C:\\Program Files\\Java\\jre1.8.0_45","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
